k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predictmarket-api
  namespace: predictmarket
spec:
  selector:
    app.kubernetes.io/name: predictmarket-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
